--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "easystarjs": "^0.4.3",
-    "phaser": "^3.16.2",
-    "normalize.css": "^8.0.0"
+    "lodash": "^4.17.11",
+    "normalize.css": "^8.0.0",
+    "phaser": "^3.16.2"
   },
   "devDependencies": {
     "ajv": "^6.3.0",
